--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -32,58 +32,70 @@
                 </table>
                 <hr>
                 <div class="d-flex justify-content-center">
-                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-search" aria-hidden="true"></i>
+                  <button type="button" class="btn btn-primary btn-rounded" (click)="pencarianKartu()"><i class="fa fa-search" aria-hidden="true"></i>
                     Cari</button>
-                  <button type="button" class="btn btn-primary btn-rounded"><i class="fa fa-reply" aria-hidden="true"></i>
+                  <button type="button" class="btn btn-primary btn-rounded" [routerLink]="['/']" routerLinkActive="router-link-active" ><i class="fa fa-reply" aria-hidden="true"></i>
                     Kembali</button>
                 </div>
               </form>
               <hr>
-              <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">DAFTAR KARTU HASIL PENCARIAN</h5>
+              <!-- tabel pencarian -->
+              <div *ngIf="isPencarian">
+                <h5 class="text-primary font-weight-bold" style="margin-top: 10px;">DAFTAR KARTU HASIL PENCARIAN</h5>
 
-              <table class="table table-hover border">
-                <thead class="grey lighten-2">
-                  <tr class="col-2 col-form-label" style="color: #2bbbad; font-weight: bold;">
-                    <th scope="col">NOMOR KARTU</th>
-                    <th scope="col">NAMA</th>
-                    <th scope="col">STATUS KARTU</th>
-                    <th scope="col">BLOK</th>
-                    <th scope="col">TUTUP/BUKA</th>
+                <table class="table table-hover border">
+                  <thead class="grey lighten-2">
+                    <tr class="col-2 col-form-label" style="color: #2bbbad; font-weight: bold;">
+                      <th scope="col">NOMOR KARTU</th>
+                      <th scope="col">NAMA</th>
+                      <th scope="col">STATUS KARTU</th>
+                      <th scope="col">BLOK</th>
+                      <th scope="col">TUTUP/BUKA</th>
+                    </tr>
+                  </thead>
+                  <tr>
+                    <td class="font-weight-normal"><a (click)="aktivasiMenu()">123456789</a></td>
+                    <td class="font-weight-normal">AAAA</td>
+                    <td class="font-weight-normal">Aktif</td>
+                    <td class="font-weight-normal">Normal</td>
+                    <td class="font-weight-normal">Buka </td>
                   </tr>
-                </thead>
-                <tr>
-                  <td class="font-weight-normal"><a [routerLink]="['/kartu/aktivasi']" routerLinkActive="router-link-active" >123456789</a></td>
-                  <td class="font-weight-normal">AAAA</td>
-                  <td class="font-weight-normal">Aktif</td>
-                  <td class="font-weight-normal">Normal</td>
-                  <td class="font-weight-normal">Buka </td>
-                </tr>
-                <tr>
-                  <td class="font-weight-normal">123456789</td>
-                  <th class="font-weight-normal">DDDDDDD</th>
-                  <td class="font-weight-normal">Aktif</td>
-                  <td class="font-weight-normal">Capture</td>
-                  <td class="font-weight-normal">Tutup</td>
-                </tr>
-              </table>
-              <!--Pagination-->
-              <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
-                <nav aria-label="Page navigation example">
-                  <ul class="pagination pg-blue">
-                    <li class="page-item">
-                      <a class="page-link">
-                        <span>&laquo;&laquo; Sebelumnya</span>
-                      </a>
-                    </li>
-                    <li class="page-item">
-                      <a class="page-link">
-                        <span>Selanjutnya &raquo;&raquo;</span>
-                      </a>
-                    </li>
-                  </ul>
-                </nav>
+                  <tr>
+                    <td class="font-weight-normal">123456789</td>
+                    <th class="font-weight-normal">DDDDDDD</th>
+                    <td class="font-weight-normal">Aktif</td>
+                    <td class="font-weight-normal">Capture</td>
+                    <td class="font-weight-normal">Tutup</td>
+                  </tr>
+                </table>
+                <!--Pagination-->
+                <div class="d-flex flex-row-reverse" style="margin-top: 15px;">
+                  <nav aria-label="Page navigation example">
+                    <ul class="pagination pg-blue">
+                      <li class="page-item">
+                        <a class="page-link">
+                          <span>&laquo;&laquo; Sebelumnya</span>
+                        </a>
+                      </li>
+                      <li class="page-item">
+                        <a class="page-link">
+                          <span>Selanjutnya &raquo;&raquo;</span>
+                        </a>
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+                <!--Pagination-->
               </div>
-              <!--Pagination-->
+              <!-- end tabel pencarian -->
+
+              <!-- <div *ngIf="isAktivasiKartu"> -->
+                  <app-tabskartu *ngIf="isAktivasiKartu"></app-tabskartu>
+                  <!-- <app-aktivasi></app-aktivasi> -->
+                <!-- <aktivasi-kartu *ngIf="isAktivasiKartu"></aktivasi-kartu> -->
+
+              <!-- </div> -->
+
             </div>
           </div>
 
@@ -92,3 +104,4 @@
     </div>
   </div>
 </div>
+<br><br><br>
