--- a/src/app/kartu/tabskartu/komponen/aktivasi/aktivasi.component.html
+++ b/src/app/kartu/tabskartu/komponen/aktivasi/aktivasi.component.html
@@ -1,38 +1,73 @@
-<h5 class="text-primary font-weight-bold">AKTIVASI KARTU</h5>
-      <div class="card">
-        <div class="card-body">
-            <form>
-              <h6 style="color: #2bbbad; font-weight: bold;">KONFIRMASI AKTIVASI KARTU</h6>
-                <div class="form-group row">
-                  <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <div class="col-3"><label class="col-form-label">1234567890</label></div>
-                  <span class="col-6"></span>
+<div class="card">
+  <div class="card-body">
+    <form>
+      <ng-container *ngIf="!isProsesAktivasi">
+        <h6 style="color: #2bbbad; font-weight: bold;">KONFIRMASI AKTIVASI KARTU</h6>
+        <hr>
+        <div class="form-group row">
+          <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">1234567890</label></div>
+          <span class="col-6"></span>
 
-                  <label class="col-2 col-form-label  font-weight-bold">Nama pada Kartu</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <div class="col-3"><label class="col-form-label">Dian </label></div>
-                  <span class="col-6"></span>
+          <label class="col-2 col-form-label  font-weight-bold">Nama pada Kartu</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">Dian </label></div>
+          <span class="col-6"></span>
 
-                  <label class="col-2 col-form-label  font-weight-bold">Jenis Kelamin</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <div class="col-3"><label class="col-form-label">Perempuan </label></div>
-                  <span class="col-6"></span>
+          <label class="col-2 col-form-label  font-weight-bold">Jenis Kelamin</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">Perempuan </label></div>
+          <span class="col-6"></span>
 
-                  <label class="col-2 col-form-label  font-weight-bold">Status</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <div class="col-3"><label class="col-form-label">Lajang </label></div>
-                  <span class="col-6"></span>
+          <label class="col-2 col-form-label  font-weight-bold">Status</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">Lajang </label></div>
+          <span class="col-6"></span>
 
-                  <label class="col-2 col-form-label  font-weight-bold">Nomor Telepon</label>
-                  <label class="col-form-label pr-0  font-weight-bold">:</label>
-                  <div class="col-3"><label class="col-form-label">081222333444</label></div>
-                  <span class="col-6"></span>
-                </div>
-                  <div class="d-flex justify-content-center">
-                    <button type="button" class="btn btn-primary btn-rounded">Proses</button>
-                    <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
-                  </div>
-            </form>
-          </div>
+          <label class="col-2 col-form-label  font-weight-bold">Nomor Telepon</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">081222333444</label></div>
+          <span class="col-6"></span>
+
+
         </div>
+        <div class="d-flex justify-content-center">
+          <button type="button" class="btn btn-primary btn-rounded" (click)="prosesAktivasi()"><i class="fa fa-refresh"
+              aria-hidden="true"></i>
+            Proses</button>
+          <button type="button" class="btn btn-primary btn-rounded" [routerLink]="['./']" routerLinkActive="router-link-active"><i
+              class="fa fa-reply" aria-hidden="true"></i>
+            Kembali</button>
+        </div>
+      </ng-container>
+
+      <ng-container *ngIf="isProsesAktivasi">
+        <h6 style="color: #2bbbad; font-weight: bold;">NOTIFIKASI AKTIVASI KARTU</h6>
+        <div class="form-group row">
+          <label class="col-2 col-form-label  font-weight-bold">Nomor Kartu</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">1234567890</label></div>
+          <span class="col-6"></span>
+
+          <label class="col-2 col-form-label  font-weight-bold">Nama pada Kartu</label>
+          <label class="col-form-label pr-0  font-weight-bold">:</label>
+          <div class="col-3"><label class="col-form-label">Dian </label></div>
+          <span class="col-6"></span>
+
+          <br>
+          <span class="col-4">
+            <h6 style="color: #2bbbad; font-weight: bold;">Transaksi Berhasil Di Proses</h6>
+          </span>
+
+        </div>
+        <div class="d-flex justify-content-center">
+          <button type="button" class="btn btn-primary btn-rounded" [routerLink]="['./']" routerLinkActive="router-link-active" ><i class="fa fa-reply" aria-hidden="true"></i>
+            Kembali</button>
+        </div>
+      </ng-container>
+
+    </form>
+    <span class="h-30"></span>
+  </div>
+</div>
