--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -29,8 +29,8 @@
               <label class="col-form-label pr-0  font-weight-bold">:</label>
               <div class="col-3"><input #inputSearch type="text" class="form-control"></div>
               <div class="input-group-append" id="button-addon4">
-                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" style="width: 60px" (click)="cariFunction(inputSearch.value)"
-                  mdbWavesEffect>Cari</button>
+                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" style="width: 60px"
+                  (click)="cariFunction(inputSearch.value)" mdbWavesEffect>Cari</button>
               </div>
             </div>
 
