--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -60,8 +60,12 @@
                     <mat-tab label="TRANSAKSI LIMIT">
                       <app-transaksi-limit></app-transaksi-limit>
                     </mat-tab>
-                    <mat-tab label="SANDI BI"> Content 4 </mat-tab>
-                    <mat-tab label="DATA TAMBAHAN"> Content 5 </mat-tab>
+                    <mat-tab label="SANDI BI">
+                      <app-sandi-bi></app-sandi-bi>
+                    </mat-tab>
+                    <mat-tab label="DATA TAMBAHAN">
+                      <app-data-tambahan></app-data-tambahan>
+                    </mat-tab>
                   </mat-tab-group>
                 </mat-tab>
                 <mat-tab label="PORTOFOLIO CIF">
