--- a/src/app/nasabah/pencarian-nasabah/komponen/transaksi-limit/transaksi-limit.component.html
+++ b/src/app/nasabah/pencarian-nasabah/komponen/transaksi-limit/transaksi-limit.component.html
@@ -4,11 +4,17 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Limit Setoran Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Setoran</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
 </div>
 <!--baris 1-->
 
@@ -16,11 +22,17 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Limit Setoran Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Setoran Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
 </div>
 <!--baris 2-->
 
@@ -29,12 +41,16 @@
   <label class="col-2 col-form-label font-weight-bold">Limit Penarikan Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
   <div class="col-3">
-      <label class="col-form-label">0.0</label>
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
   </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Penarikan Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
 </div>
 <!--baris 2-->
 
@@ -42,11 +58,17 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Limit Penarikan Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
   <span class="col-1"></span>
   <label class="col-2 col-form-label font-weight-bold">Limit Freq. Penarikan Non Tunai</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><label class="col-form-label">0.0</label></div>
+  <div class="col-3">
+    <label *ngIf="!isEdit" class="col-form-label">0.0</label>
+    <input class="form-control" *ngIf="isEdit" value="0">
+  </div>
 </div>
 <!--baris 3-->
 
