--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -49,6 +49,7 @@
 
               <mat-tab-group>
 
+                <!-- Head Tab -->
                 <mat-tab label="INFORMASI CIF">
                   <mat-tab-group>
                     <mat-tab label="DATA UMUM CIF">
@@ -68,6 +69,7 @@
                     </mat-tab>
                   </mat-tab-group>
                 </mat-tab>
+                <!-- Head Tab -->
                 <mat-tab label="PORTOFOLIO CIF">
                   <mat-tab-group>
                     <mat-tab label="First"> Content 1 </mat-tab>
