--- a/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pencarian-nasabah.component.html
@@ -71,11 +71,7 @@
                 </mat-tab>
                 <!-- Head Tab -->
                 <mat-tab label="PORTOFOLIO CIF">
-                  <mat-tab-group>
-                    <mat-tab label="First"> Content 1 </mat-tab>
-                    <mat-tab label="Second"> Content 2 </mat-tab>
-                    <mat-tab label="Third"> Content 3 </mat-tab>
-                  </mat-tab-group>
+                  <app-portofolio-cif></app-portofolio-cif>
                 </mat-tab>
                 <mat-tab label="RELASI CIF">
                   <mat-tab-group>
